--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "gera_permutacoes",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://jacksrm.github.io/permutation-generator",
   "dependencies": {
     "@agney/react-loading": "^0.1.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -19,9 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
